<resources>
    <string name="app_name">Beginner Guide for Valorant</string>
    <string name="nav_header_title">Beginner Guide for Valorant</string>
    <string name="nav_header_subtitle">by: Thinh Tran</string>
    <string name="menu_home">Home</string>
    <string name="menu_agents">Agents</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_collection">Collection</string>
    <string name="menu_info">Information</string>
    <string name="agents">Agents</string>
    <string name="maps">Maps</string>
    <string name="collection">Collection</string>
    <string name="info">Information</string>
    <string name="viper" translatable="false">VIPER</string>
    <string name="cypher" translatable="false">CYPHER</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Abilities</string>
    <string name="tab_text_3">Story</string>
    <string name="overview">Overview</string>
    <string name="ability">Ability:</string>
    <string name="signature">Signature</string>
    <string name="ultimate">Ultimate</string>
    <string name="snakebite">Snakebite</string>
    <string name="viper_ab3">Toxic Screen</string>
    <string name="viper_ab2">Poison Cloud</string>
    <string name="viper_ab4">Viper\'s Pit</string>
    <string name="viper_ability1_desc">Fire a projectile that explodes into a pool of damaging acid.</string>
    <string name="viper_ability2_desc">Throw a gas emitter that you can reactivate to create a poisonous smoke cloud at the cost of fuel. The emitter can be picked up and thrown again after a short cooldown.</string>
    <string name="viper_ability3_desc">Deploy a long line of gas emitters that you can reactivate to create a tall wall of toxic gas at the cost of fuel.</string>
    <string name="viper_ult_desc">Emit a massive toxic cloud in a large area that lasts as long as Viper stays inside the cloud. Enemies inside the cloud are highlighted to Viper.</string>
    <string name="viper_summary">Viper deploys an array of poisonous chemical devices to control the battlefield and cripple the enemy’s vision. If the toxins don’t kill her prey, her mind games surely will. A predator that deals in poison and chemical warfare. She has exploding projectiles that spill acid on the battlefield, as well as a poison-gas emitter and a toxic gas screen to prevent passage. Her ultimate emits a toxic cloud that conceals her location and highlights enemies who wander into it.</string>
    <string name="viper_desc">Description: Viper deploys an array of poisonous chemical devices to control the battlefield and cripple the enemy’s vision. If the toxins don’t kill her prey, her mind games surely will.</string>
    <string name="summary">DESCRIPTION</string>
    <string name="abilities">ABILITIES</string>
    <string name="tab_text_4">Tips</string>
    <string name="origin_morroco">Origin: Morroco</string>
    <string name="cypher_desc">Description: Cypher is a one-man surveillance network who keeps tabs on the enemy’s every move. No secret is safe. No maneuver goes unseen. Cypher is always watching.</string>
    <string name="cypher_summary">Cypher is a one-man surveillance network who keeps tabs on the enemy’s every move. No secret is safe. No maneuver goes unseen. Cypher is always watching. If intel is your thing, Cypher might be your Agent. \n\nThis Moroccan surveillant has abilities that trap and reveal the locations of enemies that get stuck in them, as well as an actual spycam he can place on the map to watch the action from afar. His ultimate extracts information from an enemy corpse to temporarily reveal the location of remaining characters on the opposing team.</string>
    <string name="sage" translatable="false">SAGE</string>
    <string name="breach" translatable="false">BREACH</string>
    <string name="raze" translatable="false">RAZE</string>
    <string name="origin_china">Origin: China</string>
    <string name="barrier_orb">Barrier Orb</string>
    <string name="resurrection">Resurrection</string>
    <string name="brim_ult_desc">Use your map to target a location, launching a devastating orbital strike that pulses for high damage over several seconds.</string>
    <string name="info_obj">Objective: \nTwo teams of five agents play against each other, agents with special unique abilities and use an economy system to purchase utilities and weapons. In the main game mode, the attacking team has a bomb, called the Spike, that they need to plant on a site. If the attacking team successfully protects the bomb and it detonates, they get a point. If the defending team successfully defuses the bomb, or the 100-second round timer expires, the defending team gets a point. Eliminating all opposing team members also earns a round win. The first team to win the best of 25 rounds wins the match.</string>
    <string name="info_overview">Riot Games presents a new competitive stage for you to shine from. A 5v5 character-based tactical shooter where creativity is your greatest weapon.</string>
    <string name="weapons">Weapons</string>
    <string name="actions_about">About</string>
    <string name="actions_credits">Credits</string>
    <string name="developer_n_Thinh_Tran">Developer: Thinh Tran</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="about">About</string>
    <string name="stats">STATS</string>
    <string name="recoil_pattern">RECOIL PATTERN</string>
    <string name="tab_wep1">Overview</string>
    <string name="tab_wep2">Tips</string>
    <string name="tab_wep3">Skins</string>
    <string name="sidearm">Sidearms</string>
    <string name="classic_pistol" translatable="false">[CLASSIC]</string>
    <string name="stats_classic">Primary Fire:  \n- Semi-Automatic  \n- Fire Rate: 6.75 rounds/sec   \n\nAlt. Fire:  \n- 3-Round Burst, spread increase  \n- Fire Rate: 2.22 rounds/sec   \n\nDamage:  \nBody 26 | Head 78 | Leg 22 [0-30m]  \nBody 22 | Head 66 | Leg 18 [30-50m]   \n\nMagazine Capacity: 12  \nWall Penetration: Low   \n\nCost: Free</string>
    <string name="shorty" translatable="false">[SHORTY]</string>
    <string name="frenzy" translatable="false">[FRENZY]</string>
    <string name="ghost" translatable="false">[GHOST]</string>
    <string name="sheriff" translatable="false">[SHERIFF]</string>
    <string name="smgs">SMGS</string>
    <string name="stinger" translatable="false">[STINGER]</string>
    <string name="spectre" translatable="false">[SPECTRE]</string>
    <string name="shotguns">Shotguns</string>
    <string name="bucky" translatable="false">[BUCKY]</string>
    <string name="judge" translatable="false">[JUDGE]</string>
    <string name="rifles">Rifles</string>
    <string name="bulldog" translatable="false">[BULLDOG]</string>
    <string name="stats_bulldog">Primary Fire:  \n- Full-Automatic  \n- Fire Rate: 9.15 rounds/second    \n\nAlt. Fire:  \n- Zoom Mode (1.25x), 3-Round Burst  \n- Fire Rate: 4 rounds/second    \n\nDamage:  \nBody 35 | Head 116 | Leg 30 [0-50m]    \n\nMagazine Capacity: 24  \nWall Penetration: Medium   \n\nCost: 2100</string>
    <string name="guardian" translatable="false">[GUARDIAN]</string>
    <string name="stats_guardian">Primary Fire:  \n- Semi-Automatic  \n- Fire Rate: 6.5 rounds/second    \n\nAlt. Fire:  \n- Zoom Mode (1.5x), slight spread reduction  \n- Fire Rate: 6.5 rounds/second    \n\nDamage:  \nBody 65 | Head 195 | Leg 49 [0-50m]    \n\nMagazine Capacity: 12  \nWall Penetration: Medium   \n\nCost: 2700</string>
    <string name="phantom" translatable="false">[PHANTOM]</string>
    <string name="stats_phantom">Primary Fire:  \n- Full-Automatic  \n- Fire Rate: 11 rounds/second    \n\nAlt. Fire:  \n- Zoom Mode (1.25x), slight spread reduction  \n- Fire Rate: 9.9 rounds/second    \n\nDamage:  \nBody 39 | Head 156 | Leg 33 [0-15m]  \nBody 35 | Head 140 | Leg 30 [15-30m]  \nBody 31 | Head 124 | Leg 26 [30-50m]    \n\nMagazine Capacity: 30  \nWall Penetration: Medium   \n\nCost: 2900</string>
    <string name="vandal" translatable="false">[VANDAL]</string>
    <string name="stats_vandal">Primary Fire:  \n- Full-Automatic  \n- Fire Rate: 9.25 rounds/second    \n\nAlt. Fire:  \n- Zoom Mode (1.25x), slight spread reduction  \n- Fire Rate: 8.32 rounds/second    \n\nDamage:  \nBody 39 | Head 156 | Leg 33 [0-50m]    \n\nMagazine Capacity: 25  \nWall Penetration: Medium   \n\nCost: 2900</string>
    <string name="heavy">Heavies</string>
    <string name="ares" translatable="false">[ARES]</string>
    <string name="stats_ares">Primary Fire: \n- Full-Automatic \n- Fire Rate: 10 -> 13 rounds/second (increasing during fire) \n\nAlt. Fire: \n- Zoom Mode (1.25x), slight spread reduction \n- Fire Rate: 10 -> 13 rounds/second (increasing during fire) \n\nDamage: \nBody 30 | Head 72 | Leg 25 [0-30m] \nBody 28 | Head 67 | Leg 23 [30-50m] \n\nMagazine Capacity: 50 \nWall Penetration: High \n\nCost: 1600</string>
    <string name="odin" translatable="false">[ODIN]</string>
    <string name="stats_odin">Primary Fire: \n- Full-Automatic \n- Fire Rate: 12 -> 15.6 rounds/second (increasing during fire) \n\nAlt. Fire: \n- Zoom Mode (1.25x), slight spread reduction \n- Fire Rate: 15.6 rounds/second \n \nDamage: \nBody 38 | Head 95 | Leg 32 [0-30m] \nBody 31 | Head 77 | Leg 26 [30-50m] \n \nMagazine Capacity: 100 \nWall Penetration: High \n\nCost: 3200</string>
    <string name="sniper">Snipers</string>
    <string name="marshal" translatable="false">[MARSHAL]</string>
    <string name="stats_marshal">Primary Fire:   \n- Semi-Automatic   \n- Fire Rate: 1.5 rounds/second      \n\nAlt. Fire:   \n- Zoom Mode (2.5x), slight spread reduction   \n- Fire Rate: 1.2 rounds/second      \n\nDamage:   \nBody 101 | Head 202 | Leg 85 [0-50m]      \n\nMagazine Capacity: 5   \nWall Penetration: Medium     \n\nCost: 1100</string>
    <string name="operator" translatable="false">[OPERATOR]</string>
    <string name="stats_operator">Primary Fire:  \n- Semi-Automatic  \n- Fire Rate: 0.75 rounds/second    \n\nAlt. Fire:  \n- Dual-Zoom Mode (2.5x, 5x), significant spread reduction  \n- Fire Rate: 0.75 rounds/second    \n\nDamage:  \nBody 150 | Head 255 | Leg 127 [0-50m]    \n\nMagazine Capacity: 5  \nWall Penetration: High   \n\nCost: 4500</string>
    <string name="shields">Shields</string>
    <string name="light_shield">Light Shield</string>
    <string name="stats_lightshield">Blocks 66% of damage taken. Breaks after it has absorbed 25 damage.    Cost: 400</string>
    <string name="heavy_shield">Heavy Shield</string>
    <string name="stats_heavyshield">Blocks 66% of damage taken. Breaks after it has absorbed 50 damage.    Cost: 1000</string>
    <string name="menu_discord" translatable="false">Discord</string>
    <string name="the_spike">The Spike</string>
    <string name="ability_cost_35s">Cost: Free (35s cooldown)</string>
    <string name="cost_100">Cost: 100</string>
    <string name="cost_200">Cost: 200</string>
    <string name="cost_300">Cost: 300</string>
    <string name="ult_cost7">Cost: 7 charges</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-8016302998575950/6459684456</string>
    <string name="ability_ultimate">Ability: Ultimate</string>
    <string name="ability_signature">Ability: Signature</string>
    <string name="ability_2">Ability: 2</string>
    <string name="ability_1">Ability: 1</string>
    <string name="breach_ab1">Aftershock</string>
    <string name="breach_ab2">Flashpoint</string>
    <string name="breach_ab3">Fault Line</string>
    <string name="breach_ab4">Rolling Thunder</string>
    <string name="type_initiator">Type: Initiator</string>
    <string name="type_controller">Type: Controller</string>
    <string name="cypher_ab1">Trapwire</string>
    <string name="cypher_ab2">Cyber Cage</string>
    <string name="type_sentinel">Type: Sentinel</string>
    <string name="type_duelist">Type: Duelist</string>
    <string name="omen_ab1">Shrouded Step</string>
    <string name="omen_ab2">Paranoia</string>
</resources>