<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ymtmb.valorantguide.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_agents"
            app:destination="@id/nav_agents" />
        <action
            android:id="@+id/action_nav_home_to_nav_collection"
            app:destination="@id/nav_collection" />
        <action
            android:id="@+id/action_nav_home_to_nav_info"
            app:destination="@id/nav_info" />
        <action
            android:id="@+id/action_nav_home_to_nav_maps"
            app:destination="@id/nav_maps" />
        <action
            android:id="@+id/action_nav_home_to_nav_weapons"
            app:destination="@id/nav_weapons" />
        <action
            android:id="@+id/action_nav_home_to_newsFragment"
            app:destination="@id/nav_spiketimer" />
    </fragment>
    <fragment
        android:id="@+id/nav_agents"
        android:name="com.ymtmb.valorantguide.ui.agents.AgentsFragment"
        android:label="@string/agents"
        tools:layout="@layout/fragment_agents" />
    <fragment
        android:id="@+id/nav_weapons"
        android:name="com.ymtmb.valorantguide.ui.weapons.WeaponsFragment"
        android:label="@string/weapons" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.ymtmb.valorantguide.ui.maps.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_collection"
        android:name="com.ymtmb.valorantguide.ui.collection.CollectionFragment"
        android:label="@string/collection" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.ymtmb.valorantguide.ui.info.InfoFragment"
        android:label="@string/info" />
    <fragment
        android:id="@+id/nav_spiketimer"
        android:name="com.ymtmb.valorantguide.ui.spiketimer.SpikeTimer"
        android:label="Spike Timer" />
</navigation>